syntax = "proto3";

import "google/protobuf/empty.proto";
import "cloudstate/entity_key.proto";

package product;

message ProductPrice {
  string product_id = 1 [(.cloudstate.entity_key) = true];
  int32 price = 2;
  string request_id = 3;
}

message GetProductMessage {
  string product_id = 1 [(.cloudstate.entity_key) = true];
  string request_id = 2;
}

message ProductResponse {
  int32 price = 1;
  int32 stock = 2;
}

message RetractStockMessage {
  string product_id = 1 [(.cloudstate.entity_key) = true];
  int32 amount = 2;
  string request_id = 3;
}

message RetractStockResponse {
  bool success = 1;
  int32 price = 2;
}

message AddStockMessage {
  string product_id = 1 [(.cloudstate.entity_key) = true];
  int32 amount = 2;
  string request_id = 3;
}

message UpdateFrequentItemsMessage {
  string product_id = 1 [(.cloudstate.entity_key) = true];
  repeated string products = 2;
  string request_id = 3;
}

message GetFrequentItemsGraphMessage {
  string product_id = 1 [(.cloudstate.entity_key) = true];
  int32 depth = 2;
  int32 top = 3;
  repeated string visited = 4;
  string request_id = 5;
}

message GetFrequentItemsGraphResponse {
  repeated string items = 1;
  string request_id = 2;
}

service ProductService {
  rpc SetPrice(ProductPrice) returns (google.protobuf.Empty);
  rpc GetProduct(GetProductMessage) returns (ProductResponse);
  rpc RetractStock(RetractStockMessage) returns (RetractStockResponse);
  rpc AddStock(AddStockMessage) returns (google.protobuf.Empty);
  rpc UpdateFrequentItems(UpdateFrequentItemsMessage) returns (google.protobuf.Empty);
  rpc GetFrequentItemsGraph(GetFrequentItemsGraphMessage) returns (GetFrequentItemsGraphResponse);
}